--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2978,7 +2978,10 @@ a.imgLink:hover::before{
 	-webkit-transform: none;
 	transform: none;
 }
-
+a:hover {
+    -webkit-transform: none;
+    transform: none;
+}
 
 a.button, a.brand, a.firstHeaderLinkPrint, a.secondHeaderLinkHome, a.thirdHeaderLinkMore {
 	color: black;;
