--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2693,6 +2693,11 @@
     padding-bottom: 7px;
   }
 
+
+  .obeyBoundaries {
+    position: relative;
+  }
+
   /* firefox only */
   @supports (-moz-appearance:none) {
     .imgrectCaptionChild {
